tests/cases/lambdas/errors/err_lambda_arity.aipl
import { wrapping_add as + } from builtins;
// The lambda's parameter count must match the expected function type.
fn apply(f: (i64) -> i64, x: i64) -> i64 {
    f(x)
}
fn main() -> i64 {
    apply(|x, y| x + y, 3)
}
--- errors ---
error: lambda has 2 parameter(s), but (i64) -> i64 was expected
 --> ./tests/cases/lambdas/errors/err_lambda_arity.aipl:7:11
  |
7 |     apply(|x, y| x + y, 3)
  |           ^^^^^^^^^^^^
